# predicting_TATABOX

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  MODEL_CARD.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
results/: tokenizer_technique_ablation.csv
scripts/: plot_ablation.py  plot_publication.py  run_ablation.py
src/predicting_tatabox/: __init__.py  ablation.py  data.py  dpo.py  tokenizer.py  tracking.py
tests/: test_ablation.py  test_data.py  test_dpo.py  test_tokenizer.py
